INCLUDES = $(XMMS2_CFLAGS)
LIBS = $(XMMS2_LIBS) $(READLINE_LIBS)
bin_PROGRAMS = nyello
nyello_SOURCES = nyello.cc\
		dispatcher.cc\
		playback.cc\
		medialibrary.cc\
		output.cc\
		columniser.cc\
		column.cc\
		countercolumn.cc\
		printable.cc\
		dictlist.cc\
		querysonglist.cc\
		playlistlist.cc\
		playlistsonglist.cc\
		patternparser.cc\
		patternnodes.cc\
		patternquery.cc\
		medialibquery.cc\
		sequence.cc\
		command.cc
