noinst_LIBRARIES = libcmd_parser.a
libcmd_parser_a_SOURCES = cmd_parser.h\
			  argument.h argument.cpp\
			  command.h command.cpp\
			  exceptions.h exceptions.cpp\
			  interpreter.h interpreter.cpp\
			  signature.h signature.cpp\
			  sig_args.h\
			  visitor.h\
			  command_completion_visitor.h command_completion_visitor.cpp\
			  argument_completion_visitor.h argument_completion_visitor.cpp

#INCLUDES = -I@top_srcdir@/
